color contrast fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -246,7 +246,7 @@ ul {
 }
 
 .tempmax {
-    color: red;
+    color: #c20000;
     /* font-weight: bold; */
 }
 
